Bug 406324 - Messages detected as scam are deleted when moved to trash
Summary: Messages detected as scam are deleted when moved to trash
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.10.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-08 09:35 UTC by Patrick
Modified: 2019-04-08 11:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick 2019-04-08 09:35:48 UTC
SUMMARY
The option 'Move to Trash' in the scam detection menu doesn't move messages to trash, but deletes them permanently. The following error is logged:
kmail[3963]: QObject::connect(KPIM::ProgressItem, KMTrashMsgCommand): invalid null parameter.

Other move to trash actions (pressing the 'Del' key) work just fine.


STEPS TO REPRODUCE
1. Select a scam message in the Inbox.
2. In the Scam detection dropdown menu, select the action 'Move to Trash'.

OBSERVED RESULT
The message had disappeared from the Inbox, but is not moved to the Trash.

EXPECTED RESULT
The message should have been moved to the Trash.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 1 Laurent Montel 2019-04-08 11:35:55 UTC
Git commit 7cd1d750b30ca534af204aaf65d9371fbc020573 by Laurent Montel.
Committed on 08/04/2019 at 11:35.
Pushed by mlaurent into branch 'Applications/19.04'.

Fix Bug 406324 - Messages detected as scam are deleted when moved to trash

Move really in trash. Don't delete it.
FIXED-IN: 5.11.0

M  +1    -1    src/kmcommands.cpp

https://commits.kde.org/kmail/7cd1d750b30ca534af204aaf65d9371fbc020573
Comment 2 Laurent Montel 2019-04-08 11:35:58 UTC
Git commit 66f91b35246c5e4055c05ce6e378691f0c45d35c by Laurent Montel.
Committed on 08/04/2019 at 11:34.
Pushed by mlaurent into branch 'Applications/19.04'.

Fix bug Bug 406324 - Messages detected as scam are deleted when moved to trash

Fix connect signal/slot error

M  +1    -1    src/kmcommands.cpp

https://commits.kde.org/kmail/66f91b35246c5e4055c05ce6e378691f0c45d35c