Fix Bug 406324 - Messages detected as scam are deleted when moved to trash

Move really in trash. Don't delete it.

BUG: 406324
FIXED-IN: 5.11.0